--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,42 @@ svg {
   }
 }
 
-.engage {
-  transition: all 3s;
+
+
+.is-engaged path:nth-child(6) {
+  fill: #FF6600;
+  transition: all 1s;
+  transition-delay: .5s;
 }
+
+.is-engaged path:nth-child(1) {
+  fill: #FF6600;
+  transition: all 1s;
+  transition-delay: .5s;
+}
+
+.is-engaged path:nth-child(2) {
+  fill: #FF6600;
+  transition: all 1s;
+  transition-delay: .75s;
+}
+
+.is-engaged path:nth-child(5) {
+  fill: #FF6600;
+  transition: all 1s;
+  transition-delay: .75s;
+}
+.is-engaged path:nth-child(3) {
+  fill: #FF6600;
+  transition: all 1s;
+  transition-delay: 1s;
+}
+
+.is-engaged path:nth-child(4) {
+  fill: #FF6600;
+  transition: all 1s;
+  transition-delay: 1s;
+}
+
+
+
